--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["manga_kindle_8uziak"]
+packages = ["src/manga_kindle"]
 
 [project]
-name = "manga-kindle-8uziak"
+name = "manga_kindle"
 version = "0.0.1"
 authors = [
   { name="Mateusz Buziak", email="matbuziak@gmail.com" },
 ]
-description = "A package to merge multiple CBZ files into one CBZ file"
+description = "Many to one CBZ file converter"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
