--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,27 @@
-future==1.0.0
-tkintertable==1.3.3
+build==1.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+docutils==0.21.2
+idna==3.7
+importlib_metadata==7.1.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+keyring==25.2.0
+-e git+https://github.com/8uziak/manga-kindle.git@6208f2eec52373faf86f15d646f1776b3456785c#egg=manga_kindle_buziak
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.2.0
+nh3==0.2.17
+packaging==24.0
+pkginfo==1.10.0
+Pygments==2.18.0
+pyproject_hooks==1.1.0
+readme_renderer==43.0
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+twine==5.0.0
+urllib3==2.2.1
+zipp==3.18.1
